@@ -1,7 +1,7 @@
 # File ggof.Rd
 # Part of the hydroGOF R package, http://www.rforge.net/hydroGOF/ ; 
 #                                 http://cran.r-project.org/web/packages/hydroGOF/
-# Copyright 2011-2013 Mauricio Zambrano-Bigiarini
+# Copyright 2009-2013 Mauricio Zambrano-Bigiarini
 # Distributed under GPL 2 or later
 
 ################################################################################
@@ -25,6 +25,9 @@ ggof <- function (sim, obs,
                   pt.style="ts",
                   ftype="o", 
                   FUN,
+
+                  stype="default", 
+                  season.names=c("Winter", "Spring", "Summer", "Autumn"),
                   
                   gof.leg = TRUE, 
                   digits=2, 
@@ -133,20 +136,20 @@ ggof <- function (sim, obs,
     } #ELSE END    
     
   # Checking 'ftype'       
-  if (is.na(match(ftype, c("o", "dm", "ma", "dma") ) ) ) 
-      stop("Invalid argument: 'ftype' must be in c('o', 'dm', 'ma, 'dma')")
+  if (is.na(match(ftype, c("o", "dm", "ma", "dma", "seasonal") ) ) ) 
+      stop("Invalid argument: 'ftype' must be in c('o', 'dm', 'ma, 'dma', 'seasonal')")
   
   # If 'obs' and 'sim' are not zoo objects, the only possible value for 'ftype' is 'o'     
   if ( !zoo::is.zoo(sim) & !zoo::is.zoo(sim) ) {
-     if (!is.na(match(ftype, c("dm", "ma", "dma") ) ) ) 
+     if (!is.na(match(ftype, c("dm", "ma", "dma", "seasonal") ) ) ) 
       message("[ Note: 'sim' & 'obs' are not zoo objects => 'ftype' was changed to 'o' ]")
       ftype <- "o"
   } else if ( zoo::is.zoo(sim) ) 
           sim.freq <- xts::periodicity(sim)$scale
          
   # Checking FUN, when 'ftype' involves monthly or annual values     
-  if (!is.na(match(ftype, c("dm", "ma", "dma") ) ) & missing(FUN) ) 
-         stop("Missing argument: 'FUN' must be provided when 'ftype' is in c('dm', 'ma, 'dma')")
+  if (!is.na(match(ftype, c("dm", "ma", "dma", "seasonal") ) ) & missing(FUN) ) 
+         stop("Missing argument: 'FUN' must be provided when 'ftype' is in c('dm', 'ma, 'dma', 'seasonal')")
 
   # If the user did not provide a title for the plot, the default is used 
   if ( missing(main) ) main <- "Observations vs Simulations"     
@@ -349,34 +352,60 @@ ggof <- function (sim, obs,
   } else if (ftype=="seasonal") {
         
     if (sim.freq %in% c("quarterly", "yearly")) {      
-      stop("Invalid argument: 'sim' has to have a 'sub-daily', 'daily' or monthly ts. However, 'sim' is a '", sim.freq, "' ts !")  
+      stop("Invalid argument: 'sim' has to have a 'sub-daily', 'daily' or 'monthly' ts. However, 'sim' is a '", sim.freq, "' ts !")  
            
     } else {       
-          # Generating Monthly time series 
-          obs.monthly <- daily2monthly(obs, FUN, na.rm) # hydroTSM::daily2monthly
-          sim.monthly <- daily2monthly(sim, FUN, na.rm) # hydroTSM::daily2monthly
+          # Checking that the user provied a valid value for 'stype'   
+          valid.types <- c("default", "FrenchPolynesia")    
+          if (length(which(!is.na(match(stype, valid.types )))) <= 0)  
+            stop("Invalid argument: 'stype' must be in c('default', 'FrenchPolynesia')")
+
+          # Labels for the seasons
+          if (stype=="default") { 
+            seasons.lab <- c("DJF",  "MAM", "JJA", "SON")
+          } else if (stype=="FrenchPolynesia") { 
+              seasons.lab <- c("DJFM", "AM",  "JJAS", "ON")
+            } # ELSE end
+
+          # Computing the seasonal values
+          sim.winter <- dm2seasonal(sim, season=seasons.lab[1], FUN=FUN, out.fmt="%Y-%m-%d")
+          sim.spring <- dm2seasonal(sim, season=seasons.lab[2], FUN=FUN, out.fmt="%Y-%m-%d")
+          sim.summer <- dm2seasonal(sim, season=seasons.lab[3], FUN=FUN, out.fmt="%Y-%m-%d")
+          sim.autumm <- dm2seasonal(sim, season=seasons.lab[4], FUN=FUN, out.fmt="%Y-%m-%d")
           
-          # Generating Annual time series 
-          obs.annual <- daily2annual(obs, FUN, na.rm, out.fmt = "%Y-%m-%d") # hydroTSM::daily2annual
-          sim.annual <- daily2annual(sim, FUN, na.rm, out.fmt = "%Y-%m-%d") # hydroTSM::daily2annual
+          obs.winter <- dm2seasonal(obs, season=seasons.lab[1], FUN=FUN, out.fmt="%Y-%m-%d")
+          obs.spring <- dm2seasonal(obs, season=seasons.lab[2], FUN=FUN, out.fmt="%Y-%m-%d")
+          obs.summer <- dm2seasonal(obs, season=seasons.lab[3], FUN=FUN, out.fmt="%Y-%m-%d")
+          obs.autumm <- dm2seasonal(obs, season=seasons.lab[4], FUN=FUN, out.fmt="%Y-%m-%d")
+
+          # Transforming the seasonal values into xts objects
+          sim.winter <- as.xts(sim.winter)
+          sim.spring <- as.xts(sim.spring)
+          sim.summer <- as.xts(sim.summer)
+          sim.autumm <- as.xts(sim.autumm)
           
+          obs.winter <- as.xts(obs.winter)
+          obs.spring <- as.xts(obs.spring)
+          obs.summer <- as.xts(obs.summer)
+          obs.autumm <- as.xts(obs.autumm)
+    
           def.par <- par(no.readonly = TRUE) # save default, for resetting... 
           on.exit(par(def.par)) 
           
           # If the user wants a legend, the screen is split into 2 rows and 2 columns, 
           # where the proportion of width of the 1st column to the 2nd one is 9:2
           if (gof.leg) {   
-            # Setting up a screen with 3 rows and 2 columns 
-            layout( matrix( c(1,1,1,1,1,1,1,1,1,2,2,3,3,3,3,3,3,3,3,3,4,4,5,5,5,5,5,5,5,5,5,6,6), ncol=11, byrow=TRUE) ) 
+            # Setting up a screen with 4 rows and 2 columns 
+            layout( matrix( c(1,1,1,1,1,1,1,1,1,2,2,3,3,3,3,3,3,3,3,3,4,4,5,5,5,5,5,5,5,5,5,6,6,7,7,7,7,7,7,7,7,7,8,8), ncol=11, byrow=TRUE) ) 
           } else {
              # Setting up the screen with 3 rows and 1 column
-             par(mfrow=c(3,1))
+             par(mfrow=c(4,1))
             } #ELSE end  
           
           par(mar=c(5, 4, 4, 0) + 0.1) # mar=c(bottom, left, top, right). Default values are: mar=c(5,4,4,2) + 0.1) 
-          # Drawing the original daily time series against time
-          plot2(x=sim, y=obs, plot.type="single",
-                main=paste("Daily", main, sep=" "), 
+          # Drawing the 'winter' time series against time
+          plot2(x=sim.winter, y=obs.winter, plot.type="single",
+                main=paste(season.names[1], " (", seasons.lab[1], ")", sep=""),
                 tick.tstep=tick.tstep, lab.tstep= lab.tstep, lab.fmt=lab.fmt,
                 cex = cex, cex.axis=cex.axis, cex.lab=cex.lab, 
                 col = col, lwd= lwd, lty=lty, pch=pch,
@@ -388,9 +417,9 @@ ggof <- function (sim, obs,
           
           # It is necessary to set up the margins again, after the previous call to plot2
           par(mar=c(5, 4, 4, 0) + 0.1) # mar=c(bottom, left, top, right). Default values are: mar=c(5,4,4,2) + 0.1)        
-          # Drawing the Monthly time series against time
-          plot2(x=sim.monthly, y=obs.monthly, plot.type="single",  
-                main=paste("Monthly", main, sep=" "), 
+          # Drawing the 'spring' time series against time
+          plot2(x=sim.spring, y=obs.spring, plot.type="single",  
+                main=paste(season.names[2], " (", seasons.lab[2], ")", sep=""),
                 tick.tstep=tick.tstep, lab.tstep= lab.tstep, lab.fmt=lab.fmt,
                 cex = cex, cex.axis=cex.axis, cex.lab=cex.lab, 
                 col = col, lwd= lwd, lty=lty, pch=pch, 
@@ -402,9 +431,23 @@ ggof <- function (sim, obs,
            
           # It is necessary to set up the margins again, after the previous call to plot2
           par(mar=c(5, 4, 4, 0) + 0.1) # mar=c(bottom, left, top, right). Default values are: mar=c(5,4,4,2) + 0.1)        
-          # Drawing the Annual time series against time
-          plot2(x=sim.annual, y=obs.annual, plot.type="single",
-                  main=paste("Annual", main, sep=" "), 
+          # Drawing the 'summer' time series against time
+          plot2(x=sim.summer, y=obs.summer, plot.type="single",
+                  main=paste(season.names[3], " (", seasons.lab[3], ")", sep=""),
+                  tick.tstep="years", lab.tstep= "years", lab.fmt=lab.fmt,
+                  cex = cex, cex.axis=cex.axis, cex.lab=cex.lab, 
+                  col = col, lwd= lwd, lty=lty, pch=pch,
+                  xlab= xlab, ylab= ylab, pt.style= pt.style, 
+                  add= TRUE, 
+                  gof.leg = gof.leg, gof.digits=digits,
+                  legend=legend, leg.cex=leg.cex,
+                  cal.ini=cal.ini, val.ini=val.ini, date.fmt=date.fmt, ... )
+
+          # It is necessary to set up the margins again, after the previous call to plot2
+          par(mar=c(5, 4, 4, 0) + 0.1) # mar=c(bottom, left, top, right). Default values are: mar=c(5,4,4,2) + 0.1)        
+          # Drawing the 'autumm' time series against time
+          plot2(x=sim.autumm, y=obs.autumm, plot.type="single",
+                  main=paste(season.names[4], " (", seasons.lab[4], ")", sep=""),
                   tick.tstep="years", lab.tstep= "years", lab.fmt=lab.fmt,
                   cex = cex, cex.axis=cex.axis, cex.lab=cex.lab, 
                   col = col, lwd= lwd, lty=lty, pch=pch,
